--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "faker": "^5.1.0",
+    "firebase": "^10.12.2",
+    "firebase-functions": "^5.0.1",
     "lowdb": "^1.0.0"
   },
   "engines": {
