--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,11 +8,12 @@ on:
       - main
 jobs:
   build_and_deploy:
-    node-version: 18
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v1
+        with:
+              node-version: 18
       - run: npm install
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
